sample web project improvements

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjectDBLocalConnection": "Data Source=WINDOWS10;Initial Catalog=ProjectDB;Integrated Security=True;TrustServerCertificate=True;"
+  }
 }
