--- a/web-app/nx.json
+++ b/web-app/nx.json
@@ -1,8 +1,5 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "affected": {
-    "defaultBase": "master"
-  },
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
@@ -46,5 +43,6 @@
       "unitTestRunner": "jest"
     }
   },
-  "defaultProject": "web-app"
+  "defaultProject": "web-app",
+  "defaultBase": "master"
 }
